# pack-tech-sim

./: .env.template  README.md  pyproject.toml
src/pack_tech_sim/: cli.py  config.py  main.py  stats.py  visual.py
src/pack_tech_sim/core/: engine.py  entities.py
src/pack_tech_sim/simulation/: scenarios.py
